# RPFM

./: .gitignore  AUTO_FLASH.md  BUILD_CONFIG.md  CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  RPFM开发日志.txt  USB_CDC_SETUP.md  build.bat  build.sh  fix_path.cmake  main.c  main_bitbang.c  pico_sdk_config.h  pico_sdk_import.cmake  rpfm_bitbang.uf2  rpfm_monitor.c  test_hid_ay8910.py  test_usb.c  ym2413.pio
RPFM_Player/: CMakeLists.txt
RPFM_Player/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
RPFM_Player/src/: ay8910_window.cpp  ay8910_window.h  main.cpp  rpfm_hid.cpp  rpfm_hid.h  rpfm_protocol.h
RPFM_Player/src/core/: chip_descriptions.h  modizer_viz.h  vgm_player_ui.cpp  vgm_player_ui.h  vgm_sync.h
RPFM_Player/src/libvgm-modizer/emu/cores/: ModizerVoicesData.h
RPFM_Player/src/midi/: midi_player.h
RPFM_Player/src/windows/sn76489/: sn76489_window.h  spfm.h
RPFM_Player/src/windows/spfm/: spfm_manager.h  spfm_window.h
RPFM_Player/src/windows/ym2163/: chip_control.h  chip_window_ym2163.h
RPFM_Player/src/windows/ym2413/: ym2413_window.h
build5/: CMakeCache.txt  Makefile  cmake_install.cmake
build5/pico-sdk/: Makefile  cmake_install.cmake
build5/pico-sdk/docs/: Makefile  cmake_install.cmake
build5/pico-sdk/src/: Makefile  cmake_install.cmake
build5/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
build5/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
build5/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
build5/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
build5/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
build5/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
build5/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
build5/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
build5/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
build5/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
build5/pico-sdk/tools/: Makefile  cmake_install.cmake
build5/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build_rpfm/: CMakeCache.txt  Makefile  cmake_install.cmake  spfm_bus.pio.h
build_rpfm/pico-sdk/: Makefile  cmake_install.cmake
build_rpfm/pico-sdk/docs/: Makefile  cmake_install.cmake
build_rpfm/pico-sdk/src/: Makefile  cmake_install.cmake
build_rpfm/pico-sdk/tools/: Makefile  cmake_install.cmake
build_rpfm/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build_scci/: CMakeCache.txt  Makefile  cmake_install.cmake  pio_cs.pio.h  ym2413.pio.h
build_scci/pico-sdk/: Makefile  cmake_install.cmake
build_scci/pico-sdk/docs/: Makefile  cmake_install.cmake
build_scci/pico-sdk/src/: Makefile  cmake_install.cmake
build_scci/pico-sdk/tools/: Makefile  cmake_install.cmake
build_scci/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
docs/: ARCHITECTURE.md  BUFFERED_MUTE.md  BUFFER_SIZE_SLIDER_AND_SHADOW_REG_SYNC.md  BUILD_CONFIG.md  CHANNEL_MUTE.md  CORE1_VGM_PLAYER_PLAN.md  FULL_PIO_BUS_WS2812_PLAN.md  GPIO_PINOUT.md  GUI_VISUALIZATION.md  IC_RESET.md  LEVEL_METER_DISPLAY_REWORK.md  PAUSE_SEEK_LOOP_PLAN.md  PIO_FULL_PARALLEL.md  PLAN_SCCI_RING_BUFFER.md  PLAN_SOFT_EMULATOR_MIXER.md  PLAYBACK_STABILITY.md  PROJECT_HISTORY.md  RPFM_HID_PROTOCOL.md  SCCI_SPFM_IMPLEMENTATION.md  SEEK_DEBUG.md  SPFM_BUS_PINOUT.md  SPFM_PROTOCOL_IMPLEMENTATION_PLAN.md  TIMING_TUNING.md  WS2812_LED.md
scripts/: build.sh  flash.sh  flash_rpfm.sh
src/: main.c  pio_cs.pio  ring_buf.h  ws2812.pio  ym2413.pio
src/rpfm/: command_buffer.h  main.c  protocol.h  spfm_bus.pio  tusb_config.h  usb_descriptors.c  vgm_player.h
src/rpfm/emu/: emu_common.h  mixer.h  scc.c  scc.h
src/scci/: ym2413.pio
test/: hid_test.c
(+568 files in other folders)
